# FocusHabits-Tracker-

./: .env.example  .gitignore  Caddyfile  Makefile  README.md  docker-compose.yml  docker.compose.server.yml
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py  0002_create_users.py  0003_create_focus_sessions.py  0004_rename_users_email_to_username.py
apps/api/app/: main.py
apps/api/app/api/: auth.py  deps.py  focus.py  routes.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  focus.py  playback.py  playlist.py  track.py  user.py
apps/api/app/schemas/: focus.py  playback.py  playlist.py  track.py  user.py
apps/api/app/services/: scanner.py
apps/api/scripts/: create_user.py  entrypoint.sh
apps/api/tests/: test_auth.py  test_health.py  test_range.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
apps/web/public/: manifest.json  sw.js
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/: AppHeader.tsx  AuthScreen.tsx  DownloadsView.tsx  FocusView.tsx  LibraryView.tsx  LoadingScreen.tsx  MiniPlayer.tsx  NowPlayingView.tsx  PlaylistsView.tsx  SettingsPanel.tsx  Sidebar.tsx
apps/web/src/lib/: api.ts  crypto.ts  db.ts  format.ts
apps/web/src/styles/: global.css
scripts/: entrypoint.sh
